--- a/Aplikacija/KonacniProjekat/Pages/VodicDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicDodaj.cshtml
@@ -16,7 +16,9 @@
           <input type="text" asp-for="NoviVodic.Email" placeholder="Email" required />
          <input type="text" asp-for="NoviKorisnik.Username" placeholder="Korisnicko ime" required />
           <input type="text"  asp-for="NoviKorisnik.Password" placeholder="Lozinka" required />
-         <button type="submit">Registruj se</button>
-     </form> 
+          <input type="text"  asp-for="NoviVodic.Slika" placeholder="Slika" required />
+       <button type="submit">Registruj se</button>
+     </form>
      </div>
 </div>
+
