--- a/Aplikacija/KonacniProjekat/Pages/TuraOceni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraOceni.cshtml
@@ -1,4 +1,95 @@
 ﻿@page
 @model KonacniProjekat.TuraOceniModel
 @{
+    ViewData["Title"] = "Radi anketu";
 }
+
+<div class="text-center">
+    <h1 class="=display-4">Anketa za turu: @Model.OvaTura.NazivTure</h1>
+</div>
+
+<form method="post">
+    <input type="hidden" asp-for="@Model.SessionId" />
+    <input type="hidden" asp-for="@Model.TuraId" />
+    <ol type="1">
+        <li>
+            <label class="form-control select-fit-text">Tip Vaše ture:</label>
+            <select class="form-control select-fit-text" asp-for="@Model.OcenaTure.TipTuriste">
+                <option value="PorodicniOdmor">Porodicni odmor</option>
+                <option value="OdmorSaPrijateljima">Odmor sa prijateljima</option>
+                <option value="UčeničkaEkskurzija">Učenička ekskurzija</option>
+                <option value="StudentskaEkskurzija">Studentska ekskurzija</option>
+                <option value="PoslovniTip">Poslovni tip</option>
+                <option value="NekiDrugiTip">Neki drugi tip</option>
+            </select>
+        </li>
+        <li>
+            <label class="form-control select-fit-text">Za vreme izvođenja ture, vreme je bilo uglavnom:</label>
+            <select class="form-control select-fit-text" asp-for="@Model.OcenaTure.VremenskiUslovi">
+                <option value="Sunčano">Suncano</option>
+                <option value="Oblačno">Oblačno</option>
+                <option value="Kišovito">Kišovito</option>
+                <option value="DelimičnoSunčano">Delimično sunčano</option>
+                <option value="Kišovito">Kišovito</option>
+                <option value="SaSnegom">Sa snegom</option>
+                <option value="Nevreme">Nevreme</option>
+                <option value="Drugo">...</option>           
+            </select>
+        </li>
+        <li>
+            <label class="form-control select-fit-text">Organizovanost ture:</label>
+            <div class="centerAnketa">
+                <div class="rangeAnketa">&#128078;<input class="custom-range border-0" type="range" id="orgTure" min="0" max="100" asp-for="@Model.OcenaTure.OrganizovanostTure" onchange="updateTextInputRangeOrganizovanostTure(this.value);"/> &#128077;</div>
+                <input class="inputUzRangeAnketa" id="inputRangeOrganizovanostTure" readonly value="" />
+            </div>
+        </li>
+        <li>
+            <label class="form-control select-fit-text">Tura je bila fizički zahtevna:</label>
+            <div class="centerAnketa">
+                <div class="rangeAnketa">&#128555;<input class="custom-range border-0" type="range" id="fizZahtTure" min="0" max="100" asp-for="@Model.OcenaTure.FizickaZahtevnostTure" onchange="updateTextInputRangeFizickaZahtevnostTure(this.value);"/> &#128526;</div>
+                <input class="inputUzRangeAnketa" id="inputRangeFizickaZahtevnostTure" readonly value="" />
+            </div>
+        </li>
+        <li>
+            <label class="form-control select-fit-text">Informisanost vodiča:</label>
+            <div class="centerAnketa">
+                <div class="rangeAnketa">&#128168;<input class="custom-range border-0" type="range" id="infVodica" min="0" max="100" asp-for="@Model.OcenaTure.InformisanostVodica" onchange="updateTextInputRangeInformisanostVodica(this.value);"/> &#128214;</div>
+                <input class="inputUzRangeAnketa" id="inputRangeInformisanostVodica" readonly value="" />
+            </div>         
+        </li>
+        <li>
+            <label class="form-control select-fit-text">Društvena atmosfera:</label>
+            <div class="centerAnketa">
+                <div class="rangeAnketa">&#128577;<input class="custom-range border-0" type="range" id="drustAtmosfera" min="0" max="100" asp-for="@Model.OcenaTure.DrustvenaAtmosfera" onchange="updateTextInputRangeDrustvenaAtmosfera(this.value);"/> &#128516;</div>
+                <input class="inputUzRangeAnketa" id="inputRangeDrustvenaAtmosfera" readonly value="" />
+            </div>
+        </li>
+        <li>
+            <label class="form-control select-fit-text">Najzanimljivija znamenitost u ovoj turi:</label>
+            <select class="form-control select-fit-text" asp-for="IzabranaNajzanimljivijaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista">
+            </select>
+        </li>
+        <li>
+            <label class="form-control select-fit-text">Najmanje zanimljiva znamenitost u ovoj turi:</label>
+            <select class="form-control select-fit-text" asp-for="IzabranaNajdosadnijaZnamenitostString" style="display:block;" asp-items="Model.IzborZnamenitostiLista">
+            </select>
+        </li>
+        <li>
+            <label class="form-control select-fit-text">Komentar:</label>
+            <div class="centerAnketa">
+                <textarea class="form-control" style="width: 80%;" asp-for="@Model.OcenaTure.Komentar"> </textarea>
+            </div>
+        </li>
+        <li>
+            <label class="form-control select-fit-text">Konačna ocena ture:</label>
+            <div class="centerAnketa">
+                <div class="rangeAnketa">&#10134;<input class="custom-range border-0" type="range" id="konOcena" min="0" max="10" asp-for="@Model.OcenaTure.KonacnaOcena" onchange="updateTextInputRangeKonacnaOcena(this.value);"/> &#10133;</div>
+                <input class="inputUzRangeAnketa" id="inputRangeKonacnaOcena" readonly value="" />
+            </div>
+        </li>
+    </ol>
+
+    <div>
+        <button type="submit">Oceni turu</button>
+    </div>
+</form>
