--- a/Aplikacija/KonacniProjekat/Pages/VodicJedan.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicJedan.cshtml
@@ -2,11 +2,15 @@
 @model KonacniProjekat.VodicJedanModel
 @{
 }
+
+<form method="get">
 <div class="card">
-  <h1>@Html.DisplayFor(model => model.Vodici.ImeVodica) @Html.DisplayFor(model => model.Vodici.PrezimeVodica)</h1>
+  <h1>@Model.TrenutniVodic.ImeVodica @Model.TrenutniVodic.PrezimeVodica</h1>
    </br>
-  <p>Licenca: @Html.DisplayFor(model => model.Vodici.Licenca)</p>
-  <p class="title">@Html.DisplayFor(model => model.Vodici.Ocena)<img src="https://livewatchstore.com/wp-content/uploads/2019/10/like.png" style="width: 20px; height:20px"/></p>
+  <p>Licenca: @Model.TrenutniVodic.Licenca</p>
+  <p class="title">@Model.TrenutniVodic.Ocena)<img src="https://livewatchstore.com/wp-content/uploads/2019/10/like.png" style="width: 20px; height:20px"/></p>
   </br>
-  <p class="title">Kontakt: @Html.DisplayFor(model => model.Vodici.BrojTelefona) | @Html.DisplayFor(model => model.Vodici.Email)</p>
+  <p class="title">Kontakt: @Model.TrenutniVodic.BrojTelefona) | @Model.TrenutniVodic.Email)</p>
+   <a asp-page="./VodicOceni" asp-route-id="@Model.TrenutniVodic.IdVodica">Oceni</a>
 </div>
+</form>
