--- a/Aplikacija/KonacniProjekat/wwwroot/css/site.css
+++ b/Aplikacija/KonacniProjekat/wwwroot/css/site.css
@@ -199,6 +199,12 @@ input[type=text]:placeholder
   backface-visibility: hidden;
   border-radius: 50px 20px;
 }
+
+li:hover
+{
+    background-color:papayawhip;
+}
+
 .card {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
