--- a/Aplikacija/KonacniProjekat/Pages/HallOfFame.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/HallOfFame.cshtml
@@ -11,7 +11,7 @@
   </li>
       }
 </ul>
-
+<div style="overflow-y: scroll;  height: 300px;">
   <table class="table">
     <thead>
       <tr>
@@ -36,3 +36,4 @@
 }
 </tbody>
 </table>
+</div>
