--- a/Aplikacija/KonacniProjekat/Pages/VodicJedan.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicJedan.cshtml
@@ -8,7 +8,7 @@
   <h1>@Model.TrenutniVodic.ImeVodica @Model.TrenutniVodic.PrezimeVodica</h1>
    </br>
   <p>Licenca: @Model.TrenutniVodic.Licenca</p>
-  <p class="title">@Model.TrenutniVodic.Ocena)<img src="https://livewatchstore.com/wp-content/uploads/2019/10/like.png" style="width: 20px; height:20px"/></p>
+  <p class="title">@Model.TrenutniVodic.Ocena<img src="https://livewatchstore.com/wp-content/uploads/2019/10/like.png" style="width: 20px; height:20px"/></p>
   </br>
   <p class="title">Kontakt: @Model.TrenutniVodic.BrojTelefona) | @Model.TrenutniVodic.Email)</p>
    <a asp-page="./VodicOceni" asp-route-id="@Model.TrenutniVodic.IdVodica">Oceni</a>
