--- a/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraJedna.cshtml
@@ -2,12 +2,37 @@
 @model KonacniProjekat.TuraJednaModel
 @{
 }
-<div class="card">
-    <h1>@Html.DisplayFor(model => model.Ture.NazivTure)</h1>
-    <p>@Html.DisplayFor(model => model.Ture.DanOdrzavanja)</p>
-    <p>@Html.DisplayFor(model => model.Ture.VremeOdrzavanja)</p>
-    <p>@Html.DisplayFor(model => model.Ture.MestoPolaska)</p>
-    <p>@Html.DisplayFor(model => model.Ture.Kapacitet)</p>
-    <p>@Html.DisplayFor(model => model.Ture.Opis)</p>
-    <p>@Html.DisplayFor(model => model.Ture.TipTure)</p>
+<div class=text-center>
+    <h1 class="display-4">@Model.Ture.NazivTure</h1>
+</div>
+
+<nav aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" asp-page="./TuraSve">Prikazi listu tura</a></li>
+  </ul>
+</nav>
+
+<div class="row">
+  <div class="col-md-5">
+    <form method="get">
+      <div><h4>Naziv:</h4> @Model.Ture.NazivTure</div>
+      <div><h4>Dan održavanja:</h4> @Model.Ture.DanOdrzavanja</div>
+      <div><h4>Vreme održavanja:</h4> @Model.Ture.VremeOdrzavanja</div>
+      <div><h4>Mesto polaska:</h4> @Model.Ture.MestoPolaska</div>
+      <div><h4>Kapacitet:</h4> @Model.Ture.Kapacitet</div>
+      <div><h4>Opis:</h4> @Model.Ture.Opis</div>
+      <div><h4>Tip ture:</h4> @Model.Ture.TipTure</div>
+    </form>
+  </div>
+  <div class="col-md-7">
+    <img class="img-fluid rounded mb-5 mb-md-0" src="http://placehold.it/700x300" alt="">
+    <form method="get">
+      <div><h4>Organizovanost ture: </h4></div>
+      <div><h4>Fizička zahtevnost:</h4></div>
+      <div><h4>Društvena atmosfera:</h4></div>
+      <div><h4>Najzanimljivija znamenitost:</h4></div>
+      <div><h4>Najmanje zanimljiva znamenitost:</h4></div>
+      <div><h4>Srednja ocena ture:</h4></div>
+    </form>
+  </div>
 </div>
