--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostJedna.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostJedna.cshtml
@@ -25,9 +25,11 @@ ViewData["Title"] = "Znamenitosti";
       <div><h4>Cena ulaznice:</h4> @Model.TrenutnaZnamenitost.CenaUlaznice</div>
     </form>
   </div>
-  <div class="col-md-5">
-    <img class="img-fluid rounded mb-5 mb-md-0" src="http://placehold.it/700x300" alt="">
-    <img class="img-fluid rounded mb-5 mb-md-0" src="http://placehold.it/700x300" alt="">
-    <img class="img-fluid rounded mb-5 mb-md-0" src="http://placehold.it/700x300" alt="">
+  <div class="col-md-5" style="overflow-y: scroll;  height: 300px;">
+    @foreach (var slika in Model.Slike)
+    {
+         <img class="img-fluid rounded mb-5 mb-md-0" src="images/@slika.Slika" alt="">
+    }
+  
   </div>
 </div>
