--- a/Aplikacija/KonacniProjekat/Pages/TuraDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraDodaj.cshtml
@@ -47,6 +47,8 @@ ViewData["Title"]="Nova tura";
 
         <label class="form-control">Id vodica:</label>
         <input asp-for="NovaTura.IdVodica" class="form-control" placeholder="Id vodica" required  />
+		
+		<label class="form-control">Znamenitosti:</label>
          
         <button type="submit">Dodaj novu turu</button>
     </div>
