--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostJedna.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostJedna.cshtml
@@ -28,7 +28,7 @@ ViewData["Title"] = "Znamenitosti";
   <div class="col-md-5" style="overflow-y: scroll;  height: 400px;">
     @foreach (var slika in Model.Slike)
     {
-         <img class="img-fluid rounded mb-5 mb-md-0" src="images/@slika.Slika" alt="">
+         <img class="img-fluid rounded mb-5 mb-md-0" src="images/znamenitosti/@slika.Slika" alt="">
     }
   
   </div>
