--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
@@ -20,7 +20,7 @@ ViewData["Title"]="Znamenitosti";
             <div class="flip-card-front">
                   @if(@znamenitost.Slika!=null)
       {
-                <img src="images/@znamenitost.Slika" alt="Avatar" style="width:300px;height:200px; border-radius: 50px 20px;  "> }
+                <img src="images/znamenitosti/@znamenitost.Slika" alt="Avatar" style="width:300px;height:200px; border-radius: 50px 20px;  "> }
             </div>
             <div class="flip-card-back">
                 <div class="text-center">
