--- a/Aplikacija/KonacniProjekat/Pages/VodicJedan.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicJedan.cshtml
@@ -14,7 +14,10 @@
   </br>
   <p class="title" style="background-color:#f2f2f2; color: #8c8c8c">Kontakt: @Model.TrenutniVodic.BrojTelefona) | @Model.TrenutniVodic.Email)</p>
    </br>
+  @if(SessionClass.TipKorisnika=="T")
+  {
   <a asp-page="./VodicOceni" asp-route-id="@Model.TrenutniVodic.IdVodica" style="color:#ff66a3; font-size:18px">Oceni</a>
+  }
 </div>
 </form>
 
