--- a/Aplikacija/KonacniProjekat/Pages/VodicOceni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicOceni.cshtml
@@ -3,14 +3,11 @@
 @{
 }
 
-
-
+<div class="cardVodic" style="text-align: center; height:200px">
+ 
 <form method="post">
-  <div class="oceni fadeInDown">
-    <div id="formContent">
-      <div class="form-group">
         <label for="ocene">Oceni vodiča</label>
-        <select class="form-control" id="ocene" asp-for="JednaOcena.Ocena">
+        <select class="form-control" id="ocene" asp-for="JednaOcena.Ocena" style="display: block;margin: 0 auto;">
           <option>10</option>
           <option>9</option>
           <option>8</option>
@@ -22,10 +19,8 @@
           <option>2</option>
           <option>1</option>
         </select>
-      </div>
       <button type="submit" class="btn btn-primary">Oceni</button>
-    </div>
-  </div>
 </form>
+</div>
 
  
