--- a/Aplikacija/KonacniProjekat/wwwroot/css/site.css
+++ b/Aplikacija/KonacniProjekat/wwwroot/css/site.css
@@ -235,16 +235,14 @@ input[type=text]:placeholder
 
 
 .oceni {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
+  text-align:center;
+  width:50%;
+  border-left:1px solid #D0D0D0;
+  background-color:#fff;
+  padding-top:40px;
+  padding-bottom:40px;
+  border-radius:5px;
+  margin: 0 auto;
 }
 .oceni:hover{
   opacity: 0.7;
