--- a/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,11 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Registracija">Registruj se</a>
                         </li>
+                        @if(SessionClass.TipKorisnika!="" && SessionClass.SessionId!=null)
+                         {<li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Odjava">Odjavi se</a>
+                        </li>
+                         }
                     </ul>
                 </div>
             </div>
