--- a/Aplikacija/KonacniProjekat/Pages/VodicDodaj.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicDodaj.cshtml
@@ -14,6 +14,7 @@
          <label>Datum rodjenja <input type="date" asp-for="NoviVodic.DatumRodjenja" required /></label>
           <input type="text" asp-for="NoviVodic.BrojTelefona" placeholder="BrojTelefona" required />
           <input type="text" asp-for="NoviVodic.Email" placeholder="Email" required />
+          <input type="text" asp-for="NoviVodic.Licenca" placeholder="Licenca" required />
          <input type="text" asp-for="NoviKorisnik.Username" placeholder="Korisnicko ime" required />
           <input type="text"  asp-for="NoviKorisnik.Password" placeholder="Lozinka" required />
           <input type="file"  asp-for="NoviVodic.Slika" placeholder="Slika" required />
