--- a/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
@@ -19,7 +19,7 @@
     </div>
     <div class="flip-card-back">
       <h2>@vodic.ImeVodica @vodic.PrezimeVodica</h2>
- <a asp-page="./VodicJedan" asp-route-id="@vodic.IdVodica" style="color:#262626; font-size:18px;">Prikazi detalje</a><i class='fas fa-id-card-alt' style="color: black;"></i>
+ <a asp-page="./VodicJedan" asp-route-id="@vodic.IdVodica" style="color:#262626; font-size:18px; position: absolute;left: 0; right: 0; bottom:2px">Prikazi detalje<i class='fas fa-id-card-alt' style="color: black;" ></i></a>
     </div>
   </div>
  </div>
