--- a/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicSvi.cshtml
@@ -7,9 +7,10 @@
 <div class="text-center">
     <h1 class="display-4">Vodici</h1>
 </div>
-<div style="display: grid;  grid-template-columns: auto auto auto;">
+<div class="row" style="margin: 0 -70px;">
 @foreach (var vodic in Model.Vodici) 
 {
+  <div class="column">
  <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
@@ -19,10 +20,11 @@
     </div>
     <div class="flip-card-back">
       <h2>@vodic.ImeVodica @vodic.PrezimeVodica</h2>
- <a asp-page="./VodicJedan" asp-route-id="@vodic.IdVodica" style="color:#262626; font-size:18px; position: absolute;left: 0; right: 0; bottom:2px">Prikazi detalje<i class='fas fa-id-card-alt' style="color: black;" ></i></a>
+ <a asp-page="./VodicJedan" asp-route-id="@vodic.IdVodica" style="color:#262626; font-size:18px; position: absolute;left: 0; right: 0; bottom:2px">Prikazi detalje <i class='fas fa-id-card-alt' style="color: black;" ></i></a>
     </div>
   </div>
  </div>
+  </div>
 }
 </div>
 </form>
