--- a/Aplikacija/KonacniProjekat/Pages/VodicSviNalozi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/VodicSviNalozi.cshtml
@@ -15,12 +15,12 @@
   <div class="column">
    <h3>Id: @vodic.IdVodica</h3>
     <p>Ime i prezime: @vodic.ImeVodica @vodic.PrezimeVodica</p>
-    <p>Datum rođenja: @vodic.DatumRodjenja.ToString()</p>
+    <p>Datum rođenja: @Convert.ToString(string.Format("{0:dd/MM/yyyy}", vodic.DatumRodjenja))</p>
     <p>Pol: @vodic.Pol</p>
     <p>Broj telefona: @vodic.BrojTelefona</p>
     <p>Email: @vodic.Email</p>
     <p>Ocena: @vodic.Ocena</p>
-    <button type="submit" asp-route-id="@vodic.IdVodica" asp-page-handler="Obrisi">Obrisi vodica <i class='fas fa-user-alt-slash'></i></button> 
+    <button type="submit" asp-route-id="@vodic.IdVodica" asp-page-handler="Obrisi" style="position: absolute;left: 0; right: 0">Obrisi vodica <i class='fas fa-user-alt-slash'></i></button> 
   </div>
 </div>
 }
