--- a/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraSve.cshtml
@@ -8,26 +8,29 @@ ViewData["Title"]="Ture";
     <h1 class="display-4">Ture</h1>
 </div>
 
-<div class="text-right">
-    <h3><a asp-page="./TuraDodaj">Dodaj turu</a></h3>
-</div>
+<nav aria-label="Page navigation">  
+    <ul class="pagination justify-content-end">
+        <li class="page-item"><a class="page-link" asp-page="./TuraDodaj">Dodaj turu</a></li>
+    </ul>
+</nav>
 
+<div style="overflow-y: scroll;  height: 450px;">
 <div style="display: grid;  grid-template-columns: auto auto auto;">
 @foreach (var  tura in Model.SveTure) 
 {
-    <div class="flip-card">
-        <div class="flip-card-inner">
-            <div class="flip-card-front">
-                <img src="https://i.redd.it/rn1se5zkikkz.png" alt="Avatar" style="width:200px;height:200px; border-radius: 50px 20px;  ">
+    <div class="flip-card-ture">
+        <div class="inner-ture">
+            <div class="front-ture">
+                 <h1> @tura.NazivTure  </h1> 
             </div>
-            <div class="flip-card-back">
-                <div class="text-center">
-                    <div><h2>@tura.NazivTure</h2></div>
-                    <div><button type="submit" asp-route-id="@Model.SessionId" asp-route-tura="@tura.IdTure" asp-page-handler="Rezervisi">Rezervisi turu</button></div>
-                    <div><a asp-page="./TuraJedna" asp-route-id="@tura.IdTure">Prikazi detalje</a></div>
-                    </div>
+            <div class="back-ture">
+                <div><a asp-page="./TuraRezervisi" asp-route-id="@Model.SessionId" asp-route-tura="@tura.IdTure">Rezervisi turu</a></div>
+                <div><a asp-page="./TuraJedna" asp-route-id="@tura.IdTure">Prikazi detalje</a></div>
+                <div><a asp-page="./TuraOceni" asp-route-id="@Model.SessionId" asp-route-tura="@tura.IdTure">Oceni turu</a></div>
+                <div><a asp-page="./TuraIzmeni" asp-route-id="@Model.SessionId" asp-route-tura="@tura.IdTure">Izmeni turu</a></div>
             </div>
         </div>
     </div>
 }
+</div>
 </div>
